--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   mongodb:
     image: mongo
     container_name: mongo
-    restart: unless_stopped
+    restart: unless-stopped
     ports:
       - "27017:27017"
     environment:
@@ -16,7 +16,7 @@ services:
   backend: 
     build: ./
     container_name: backend
-    restart: unless_stopped
+    restart: unless-stopped
     ports: 
       - 3000:3000
     volumes:
