--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,16 @@ certifi==2023.11.17
 click==8.1.7
 colorama==0.4.6
 distlib==0.3.7
+dnspython==2.4.2
 filelock==3.13.1
 Flask==3.0.0
+Flask-PyMongo==2.3.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 pipenv==2023.11.15
 platformdirs==4.0.0
+pymongo==4.6.1
 python-dotenv==1.0.0
 virtualenv==20.25.0
 Werkzeug==3.0.1
